--- a/src/main/resources/templates/localGroups.html
+++ b/src/main/resources/templates/localGroups.html
@@ -75,6 +75,7 @@
 <section>
   <h2 class="hidden">Dialoge</h2>
 
+  <!-- 'add local group' modal -->
   <section class="modal fade" id="add-localGroup-modal" tabindex="-1" role="dialog" aria-labelledby="add-localGroup-label">
       <div class="modal-dialog" role="document">
           <div class="modal-content">
